(fix) Flask admonition/tag dark mode color from light green to dark purple

--- a/src/scss/theme/_admonition-type.scss
+++ b/src/scss/theme/_admonition-type.scss
@@ -143,8 +143,16 @@
     }
 
     &.theme-admonition-flaskOnly {
-      color: var(--general-black);
+      --ifm-alert-background-color: var(--developer-purple-dark);
+      color: var(--developer-purple-light);
+
+      [class*='admonitionHeading'] {
+        color: var(--developer-purple-light);
+      }
+
       a {
+        color: var(--developer-purple-light);
+
         &:hover {
           color: var(--consumer-green-light) !important;
         }
